add and center background image

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
-* {
-  color:red;
+html {
+  background: url("./images/bubble-small.jpg") no-repeat center center fixed;
+  background-size: cover;
 }
+
+
+
+
