--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,21 @@ h1{
   line-height: 1.4;
 }
 
+.blurred{
+  filter: blur(5px);
+}
+
+.about-modal{
+  position:fixed;
+  top:0; 
+  left:0; 
+  width:100%; 
+  height:100%; 
+  text-align:center;
+  background-color:#545454;
+  opacity: 0.5;
+}
+
 
 .inner {
   font-family: 'Alfa Slab One';
