--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,11 @@ body, html {
   margin: 0; 
   padding: 0; 
   height: 100%;
+  color:white;
 }
 
 body {
-  background: url("./images/bubble-small.jpg") no-repeat center center fixed;
+  background: url("./images/bubble-small.jpg") no-repeat bottom center fixed;
   background-size: cover;
   font-family: 'Open Sans', sans-serif;
 }
@@ -26,22 +27,35 @@ h1{
   font-size: 1.75rem;
   line-height: 1.4;
 }
+ h2{
+   position: relative;
+   text-transform: uppercase;
+   border-bottom: 2px solid white;
+   width: max-content;
+   padding: 0.5rem;
+   margin: 0 0 2rem 0;
+   font-family: 'Abril Fatface', serif;
+ }
 
 .blurred{
-  filter: blur(5px);
+  /* filter: blur(5px); */
+  padding: 1em;
 }
 
-.about-modal{
-  position:fixed;
-  top:0; 
-  left:0; 
-  width:100%; 
-  height:100%; 
-  text-align:center;
-  background-color:#545454;
-  opacity: 0.5;
+.main-modal{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 90%;
+  position: fixed;
+	z-index: 999;
+	height: 100%;
+	text-align: center;
+  background: #202020d3;
+  /* background: #eb0808d3; */
+  border-radius: 4px;
+  overflow: hidden;
 }
-
 
 .inner {
   font-family: 'Alfa Slab One';
@@ -85,6 +99,10 @@ h1{
     margin: auto;
 }
 
+.about-image {
+  width: 100%;
+}
+
 #wrapper{
   display: flex;
   align-items:flex-start;
@@ -96,6 +114,20 @@ h1{
  padding: 1.5rem 0;
  text-align: center;
  margin-top: 2em;
+}
+
+#about{
+ padding: 3rem 1.5rem 0.5rem 1.5rem;
+ display: block;
+ overflow-y: scroll;
+}
+
+#portfolio{
+
+}
+
+#contact{
+
 }
 
 .inner p{
@@ -122,8 +154,20 @@ h1{
 
 .bottom-nav li{
   border:2px inset #a7a7a7;
-  border-radius: 4%;
+  border-radius: 4px;
   margin: auto; 
   padding: 0;
   
 }
+
+/* #about modal{
+  position:fixed;
+  top:0; 
+  left:0; 
+  width:100%; 
+  height:100%; 
+  text-align:center;
+  background-color:#b91010;
+  opacity: 0.5;
+} */
+
