--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,11 @@ body, html {
   padding: 0; 
   height: 100%;
   color:white;
-  filter:hue-rotate(90deg);
+  
 }
 
 body {
   background: url("./images/bubble-small.jpg") no-repeat bottom center fixed;
-  filter:hue-rotate(90deg);
   background-size: cover;
   font-family: 'Open Sans', sans-serif;
 }
@@ -39,9 +38,7 @@ h1{
    font-family: 'Abril Fatface', serif;
  }
 
-.blurred{
-  /* filter: blur(5px); */
-  filter:hue-rotate(90deg);
+.blurred{  
   padding: 1em;
 }
 
@@ -50,13 +47,11 @@ h1{
   flex-direction: column;
   justify-content: center;
   max-width: 90%;
-  position: fixed;
 	z-index: 999;
 	height: 100%;
 	text-align: center;
   background: #202020d3;
   border-radius: 4px;
-  overflow: hidden;
 }
 
 .inner {
@@ -106,7 +101,7 @@ h1{
   display: flex;
   align-items:flex-start;
   justify-content: center;
-  height: 100%;
+  /* height: 100%; */
 }
 
 #header{
@@ -118,7 +113,7 @@ h1{
 #about{
  padding: 3rem 1.5rem 0.5rem 1.5rem;
  display: block;
- overflow-y: scroll;
+ /* overflow-y: scroll; */
 }
 
 #portfolio{
