--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
   background: url("./images/bubble-small.jpg") no-repeat bottom center fixed;
   background-size: cover;
   font-family: 'Open Sans', sans-serif;
+  padding: 1em;
 }
 
 ul{
@@ -34,22 +35,28 @@ h1{
    border-bottom: 2px solid white;
    width: max-content;
    padding: 0.5rem;
-   margin: 0 0 2rem 0;
+   margin: 0 auto 2rem;
    font-family: 'Abril Fatface', serif;
+   text-align: center;
  }
 
-.blurred{  
-  padding: 1em;
+
+.hidden{
+  display: none !important;
 }
 
-.main-modal{
+.go-back{
+  width: 15%;
+  display: block;
+}
+
+.modal{
   display: flex;
   flex-direction: column;
   justify-content: center;
   max-width: 90%;
 	z-index: 999;
 	height: 100%;
-	text-align: center;
   background: #202020d3;
   border-radius: 4px;
 }
@@ -93,6 +100,11 @@ h1{
     margin: auto;
 }
 
+.modal-header{
+  display:flex;
+  justify-content: space-between;
+}
+
 .about-image {
   width: 100%;
 }
@@ -101,7 +113,6 @@ h1{
   display: flex;
   align-items:flex-start;
   justify-content: center;
-  /* height: 100%; */
 }
 
 #header{
@@ -110,10 +121,9 @@ h1{
  margin-top: 2em;
 }
 
-#about{
+#about-content{
  padding: 3rem 1.5rem 0.5rem 1.5rem;
  display: block;
- /* overflow-y: scroll; */
 }
 
 #portfolio{
@@ -128,6 +138,7 @@ h1{
   letter-spacing: 0.2rem;
   font-size: 1.2rem;
   line-height: 1.875;
+  text-align: center;
 
 }
 
@@ -153,15 +164,4 @@ h1{
   padding: 0;
   
 }
-
-/* #about modal{
-  position:fixed;
-  top:0; 
-  left:0; 
-  width:100%; 
-  height:100%; 
-  text-align:center;
-  background-color:#b91010;
-  opacity: 0.5;
-} */
 
